[package]
name = "tuntap"
version = "0.1.5"
categories = ["network-programming"]
license = "MIT"

[badges]
travis-ci = { repository = "vorner/tuntap" }
maintenance = { status = "passively-maintained" }

[features]
default = ["tokio"]
tokio = ["futures", "libc", "mio", "tokio-core"]

[build-dependencies]
cc = "~1"

[dependencies]
futures = { version = "~0.1", optional = true }
libc = { version = "~0.2", optional = true }
mio = { version = "~0.6", optional = true }
tokio-core = { version = "~0.1", optional = true }

[dev-dependencies]
version-sync = "~0.9"
etherparse = "~0.9"
serial_test = "~0.4"
